force-app/main/default/objects/TWIST_Settings__c/TWIST_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TWIST - Settings</label>
</CustomObject>