force-app/main/default/objects/TWIST_Settings__c/fields/Allow_Plus_Symbol_In_Email__c.field-meta.xml
<CustomField>
    <fullName>Allow_Plus_Symbol_In_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Plus Symbol In Email</label>
    <type>Checkbox</type>
</CustomField>