force-app/main/default/objects/TWIST_Settings__c/fields/AOB_Cert_Name__c.field-meta.xml
<CustomField>
    <fullName>AOB_Cert_Name__c</fullName>
    <label>AOB Cert Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>