force-app/main/default/objects/TWIST_Settings__c/fields/AOB_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>AOB_Client_Id__c</fullName>
    <label>AOB Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>