force-app/main/default/objects/TWIST_Settings__c/fields/AOB_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>AOB_Site_URL__c</fullName>
    <label>AOB Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>