force-app/main/default/objects/TWIST_Settings__c/fields/Auth_Path__c.field-meta.xml
<CustomField>
    <fullName>Auth_Path__c</fullName>
    <label>Auth Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>