force-app/main/default/objects/TWIST_Settings__c/fields/Countries_New_Locales__c.field-meta.xml
<CustomField>
    <fullName>Countries_New_Locales__c</fullName>
    <description>!! important: locales must be separated by a / surrounded by spaces + first one must be the main one</description>
    <label>Countries New Locales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>