force-app/main/default/objects/TWIST_Settings__c/fields/Default_Language_Country_Flag_Label__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_Country_Flag_Label__c</fullName>
    <label>Default Language Country Flag Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>