force-app/main/default/objects/TWIST_Settings__c/fields/Default_Language_Country_Flag_Title__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_Country_Flag_Title__c</fullName>
    <label>Default Language Country Flag Title</label>
    <length>10</length>
    <type>Text</type>
</CustomField>