force-app/main/default/objects/TWIST_Settings__c/fields/Default_Language_Country_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Default_Language_Country_Parameter__c</fullName>
    <label>Default Language Country Parameter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>