force-app/main/default/objects/TWIST_Settings__c/fields/Email_Token_Chars__c.field-meta.xml
<CustomField>
    <fullName>Email_Token_Chars__c</fullName>
    <label>Email Token Chars</label>
    <length>255</length>
    <type>Text</type>
</CustomField>