force-app/main/default/objects/TWIST_Settings__c/fields/Email_Token_Size__c.field-meta.xml
<CustomField>
    <fullName>Email_Token_Size__c</fullName>
    <label>Email Token Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>