force-app/main/default/objects/TWIST_Settings__c/fields/Env_In_Reset_Password_Url__c.field-meta.xml
<CustomField>
    <fullName>Env_In_Reset_Password_Url__c</fullName>
    <label>Env In Reset Password Url</label>
    <length>25</length>
    <type>Text</type>
</CustomField>