force-app/main/default/objects/TWIST_Settings__c/fields/Env_Int_Footer_Url__c.field-meta.xml
<CustomField>
    <fullName>Env_Int_Footer_Url__c</fullName>
    <label>Env Int Footer Url</label>
    <type>Url</type>
</CustomField>