force-app/main/default/objects/TWIST_Settings__c/fields/Exclu_Offers_Web_Only__c.field-meta.xml
<CustomField>
    <fullName>Exclu_Offers_Web_Only__c</fullName>
    <label>Exclu Offers Web Only</label>
    <type>TextArea</type>
</CustomField>