force-app/main/default/objects/TWIST_Settings__c/fields/Footer_Info_API__c.field-meta.xml
<CustomField>
    <fullName>Footer_Info_API__c</fullName>
    <label>Footer Info API</label>
    <length>60</length>
    <type>Text</type>
</CustomField>