force-app/main/default/objects/TWIST_Settings__c/fields/Footer_Links_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Footer_Links_Base_Url__c</fullName>
    <label>Footer Links Base Url</label>
    <type>Url</type>
</CustomField>