force-app/main/default/objects/TWIST_Settings__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <type>Url</type>
</CustomField>