force-app/main/default/objects/TWIST_Settings__c/fields/Is_Active_User_Creation__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_User_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User creation for password reset if true we create a user each time we find an account associated with the client email</description>
    <label>Is Active User Creation</label>
    <type>Checkbox</type>
</CustomField>