force-app/main/default/objects/TWIST_Settings__c/fields/Language_Country_Values__c.field-meta.xml
<CustomField>
    <fullName>Language_Country_Values__c</fullName>
    <label>Language Country Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>