force-app/main/default/objects/TWIST_Settings__c/fields/Network_Id__c.field-meta.xml
<CustomField>
    <fullName>Network_Id__c</fullName>
    <description>ID of the Experience Cloud site</description>
    <label>Network Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>