force-app/main/default/objects/TWIST_Settings__c/fields/Origins_to_replace__c.field-meta.xml
<CustomField>
    <fullName>Origins_to_replace__c</fullName>
    <label>Origins to replace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>