force-app/main/default/objects/TWIST_Settings__c/fields/Password_checked_duration__c.field-meta.xml
<CustomField>
    <fullName>Password_checked_duration__c</fullName>
    <label>Password checked duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>