force-app/main/default/objects/TWIST_Settings__c/fields/Password_Maxlength__c.field-meta.xml
<CustomField>
    <fullName>Password_Maxlength__c</fullName>
    <label>Password Maxlength</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>