force-app/main/default/objects/TWIST_Settings__c/fields/Purge_ResetPwdRequest__c.field-meta.xml
<CustomField>
    <fullName>Purge_ResetPwdRequest__c</fullName>
    <label>Purge ResetPwdRequest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>