force-app/main/default/objects/TWIST_Settings__c/fields/PurgeVerificationCodeIntervalInDays__c.field-meta.xml
<CustomField>
    <fullName>PurgeVerificationCodeIntervalInDays__c</fullName>
    <label>PurgeVerificationCodeIntervalInDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>