force-app/main/default/objects/TWIST_Settings__c/fields/Pwdless_Email_Verif_Identifier_Validity__c.field-meta.xml
<CustomField>
    <fullName>Pwdless_Email_Verif_Identifier_Validity__c</fullName>
    <label>Pwdless Email Verif Identifier Validity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>