force-app/main/default/objects/TWIST_Settings__c/fields/Pwdless_Ghost_Path_Verified__c.field-meta.xml
<CustomField>
    <fullName>Pwdless_Ghost_Path_Verified__c</fullName>
    <label>Pwdless Ghost Path Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>