force-app/main/default/objects/TWIST_Settings__c/fields/Reset_Password_Max_Requests__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_Max_Requests__c</fullName>
    <label>Reset Password Max Requests</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>