force-app/main/default/objects/TWIST_Settings__c/fields/Reset_Password_Redirection_Host__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_Redirection_Host__c</fullName>
    <label>Reset Password Redirection Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>