force-app/main/default/objects/TWIST_Settings__c/fields/SFCC_Feature_Flag_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Feature_Flag_Endpoint__c</fullName>
    <label>SFCC Feature Flag Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>