force-app/main/default/objects/TWIST_Settings__c/fields/Target_origin__c.field-meta.xml
<CustomField>
    <fullName>Target_origin__c</fullName>
    <label>Target origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>