force-app/main/default/objects/TWIST_Settings__c/fields/Utag__c.field-meta.xml
<CustomField>
    <fullName>Utag__c</fullName>
    <label>Utag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>